style.css
:root {
    --grid-size: 4;
}

#container {
    width: 960px;
    height: 960px;
    background: rgb(186, 130, 0);
    display: grid;
    grid-template-columns: repeat(var(--grid-size), 1fr);
    grid-template-rows: repeat(var(--grid-size), 1fr);
    gap: 2px;
}

.square {
    box-sizing: border-box;
    /* border: solid black 2px; */
    /* width: 50px;
    height: 50px; */
    background: aquamarine;
}

